name:                hastron
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Abhinav Sarkar
maintainer:          abhinav@abhinavsarkar.net
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:   Haskell2010
  ghc-options:        -Wall
  hs-source-dirs:     src
  exposed-modules: 
    Hastron.Server.Types
    Hastron.Utils
    Hastron.Game.Player
    Hastron.Game.Types
    Hastron.Game.Engine
  build-depends:    
    base >=4.7 && <4.9,
    text >=1.2 && <1.3,
    unordered-containers >=0.2.5 && <0.3,
    hashable >=1.2 && <1.3


executable hastron-exec
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       
    base >=4.7 && <4.9,
    hastron
  default-language:    Haskell2010

test-suite test
  type:               exitcode-stdio-1.0
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     tests
  main-is:            TestMain.hs
  build-depends:      
    base >=4.7 && <4.9,
    hastron, 
    tasty >=0.10 && <0.11,
    tasty-hunit >=0.9 && <0.10,
    tasty-quickcheck >=0.8 && <0.9,
    QuickCheck >=2.8 && <2.9

